<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_edit" android:icon="@drawable/ic_action_edit" android:orderInCategory="1" android:title="@string/action_edit" android:showAsAction="ifRoom" android:onClick="toBeImplemented"></item>
    <item android:id="@+id/action_new" android:orderInCategory="2" android:title="@string/action_new" android:icon="@drawable/ic_action_new" android:showAsAction="ifRoom" android:onClick="toBeImplemented"></item>
    <item android:id="@+id/action_delete" android:orderInCategory="3" android:showAsAction="ifRoom" android:title="@string/action_delete" android:icon="@drawable/ic_action_remove" android:onClick="toBeImplemented"></item>
    <item android:id="@+id/action_toToday" android:showAsAction="never" android:title="@string/action_toToday" android:orderInCategory="4" android:onClick="goToToday"></item>
    

</menu>
