<?xml version="1.0" encoding="utf-8"?>

<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/queenTV" />

    <TextView
        android:id="@+id/queenTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/hiveNameTV"
        android:layout_below="@+id/hiveNameTV"
        android:layout_marginTop="14dp"
        android:text="@string/queenString"
        android:textSize="25sp"
        android:textColor="#000" />

    <TextView
        android:id="@+id/qDateBornTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/queenTV"
        android:layout_below="@+id/progressBar1"
        android:layout_marginTop="10dp"
        android:text="@string/qDateBornString"
        android:textColor="#000" />

    <TextView
        android:id="@+id/qWingsClipedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/qDateBornTV"
        android:layout_below="@+id/qDateBornTV"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/qWingsClipedString"
        android:textColor="#000" />

    <TextView
        android:id="@+id/qRaceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/qWingsClipedTV"
        android:layout_below="@+id/qWingsClipedTV"
        android:text="@string/qRaceString"
        android:textColor="#000" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/qRaceTV" />

    <TextView
        android:id="@+id/nrOfFramesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/qRaceTV"
        android:layout_below="@+id/progressBar2"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/nrOfFramesString"
        android:textColor="#000" />

    <TextView
        android:id="@+id/ocupiedFramesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/nrOfFramesTV"
        android:layout_below="@+id/nrOfFramesTV"
        android:layout_marginBottom="10dp"
        android:text="@string/ocupiedFramesString"
        android:textColor="#000" />

    <TextView
        android:id="@+id/larveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/eggsTV"
        android:layout_below="@+id/eggsTV"
        android:layout_marginBottom="10dp"
        android:text="@string/larveString"
        android:textColor="#000" />

    <TextView
        android:id="@+id/pupaeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/larveTV"
        android:layout_below="@+id/larveTV"
        android:layout_marginBottom="10dp"
        android:text="@string/pupaeString"
        android:textColor="#000" />

    <TextView
        android:id="@+id/nrOfMitesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pupaeTV"
        android:layout_below="@+id/pupaeTV"
        android:layout_marginBottom="10dp"
        android:text="@string/nrOfMitesString"
        android:textColor="#000" />

    <EditText
        android:id="@+id/nrOfFrames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nrOfFramesTV"
        android:layout_alignLeft="@+id/qRace"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:inputType="numberDecimal|text" />

    <EditText
        android:id="@+id/ocupiedFrames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ocupiedFramesTV"
        android:layout_alignLeft="@+id/nrOfFrames"
        android:ems="10"
        android:inputType="numberDecimal"
        android:background="@drawable/rect_edit_text" />

    <EditText
        android:id="@+id/eggs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/eggsTV"
        android:layout_alignLeft="@+id/nrOfFrames"
        android:ems="10"
        android:inputType="numberDecimal"
        android:background="@drawable/rect_edit_text" />

    <EditText
        android:id="@+id/larve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/larveTV"
        android:layout_alignLeft="@+id/ocupiedFrames"
        android:ems="10"
        android:inputType="numberDecimal"
        android:background="@drawable/rect_edit_text" />

    <EditText
        android:id="@+id/pupae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pupaeTV"
        android:layout_alignLeft="@+id/eggs"
        android:ems="10"
        android:inputType="numberDecimal"
        android:background="@drawable/rect_edit_text" />

    <EditText
        android:id="@+id/nrOfMites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nrOfMitesTV"
        android:layout_alignLeft="@+id/larve"
        android:ems="10"
        android:inputType="numberDecimal"
        android:background="@drawable/rect_edit_text" />

    <TextView
        android:id="@+id/hiveNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/hiveNameString"
        android:textSize="25sp"
        android:textColor="#000" />

    <CheckBox
        android:id="@+id/queenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/queenTV"
        android:layout_alignBottom="@+id/queenTV"
        android:layout_toRightOf="@+id/queenTV" />

    <CheckBox
        android:id="@+id/qWingsClippedCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/queenCheckBox"
        android:layout_below="@+id/qDateBorn" />

    <TextView
        android:id="@+id/hiveName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/queenTV"
        android:layout_toRightOf="@+id/queenCheckBox"
        android:textSize="25sp"
        android:textColor="#000" />

    <TextView
        android:id="@+id/eggsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nrOfLayersTV"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@+id/eggs"
        android:text="@string/eggsString"
        android:textColor="#000" />

    <EditText
        android:id="@+id/nrOfLayersET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nrOfLayersTV"
        android:layout_toRightOf="@+id/ocupiedFramesTV"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:inputType="numberDecimal|text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/honeyCombsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nrOfMitesTV"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@+id/nrOfLayersET"
        android:text="@string/honeyCombsString"
        android:textColor="#000" />

    <EditText
        android:id="@+id/honeyCombsET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/honeyCombsTV"
        android:layout_alignLeft="@+id/nrOfLayersET"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:inputType="numberDecimal|text" />

    <TextView
        android:id="@+id/commentsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/honeyCombsTV"
        android:layout_toLeftOf="@+id/nrOfMites"
        android:text="@string/commentsString"
        android:textColor="#000" />

    <EditText
        android:id="@+id/commentsET"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/honeyCombsET"
        android:layout_below="@+id/honeyCombsTV"
        android:ems="10"
        android:inputType="textMultiLine"
        android:background="@drawable/rect_edit_text" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/commentsET" />

    <Button
        android:id="@+id/saveForm"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar3"
        android:layout_marginTop="150dp"
        android:layout_toRightOf="@+id/honeyCombsTV"
        android:text="@string/saveButton" />

    <TextView
        android:id="@+id/hasDiseaseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/commentsTV"
        android:layout_below="@+id/progressBar3"
        android:layout_marginTop="28dp"
        android:text="@string/hasDiseaseString"
        android:textColor="#000" />

    <TextView
        android:id="@+id/diseaseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hasDiseaseTV"
        android:layout_alignBottom="@+id/hasDiseaseTV"
        android:layout_alignLeft="@+id/commentsET"
        android:layout_marginLeft="14dp"
        android:textColor="#000" />

    <Button
        android:id="@+id/checkDiseaseButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diseaseStatus"
        android:layout_below="@+id/diseaseStatus"
        android:layout_marginBottom="5dp"
        android:text="@string/checkDiseaseString" />

    <Button
        android:id="@+id/AddDisease"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkDiseaseButton"
        android:layout_alignRight="@+id/checkDiseaseButton"
        android:layout_below="@+id/checkDiseaseButton"
        android:text="@string/AddDiseaseString" />

    <EditText
        android:id="@+id/qDateBorn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/qDateBornTV"
        android:layout_toRightOf="@+id/qDateBornTV"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:inputType="date"
        android:textColor="#000" />

    <EditText
        android:id="@+id/qRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/qRaceTV"
        android:layout_toRightOf="@+id/qRaceTV"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/nrOfLayersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/eggsTV"
        android:layout_below="@+id/ocupiedFramesTV"
        android:layout_marginBottom="10dp"
        android:text="@string/nrOfLayersString"
        android:textColor="#000" />

</RelativeLayout>
</ScrollView>