<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/newusernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newAccountTittle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/newAccountTittle"
        android:ems="10"
        android:background="@drawable/rect_edit_text"
        android:inputType="text" />

    <TextView
        android:id="@+id/newPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newAccountTittle"
        android:layout_below="@+id/newAccountTittle"
        android:layout_marginTop="15dp"
        android:textColor="#000"
        android:textSize="17sp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/newpasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newPasswordTextView"
        android:layout_alignLeft="@+id/newusernameEditText"
        android:layout_alignRight="@+id/newusernameEditText"
        android:ems="10"
        android:background="@drawable/rect_edit_text"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/newUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/newAccountString"
        android:textColor="#000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/newAccountTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="92dp"
        android:textColor="#000"
        android:textSize="17sp"
        android:text="@string/username" />

    <Button
        android:id="@+id/createAccount"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newpasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/createAccount" />

    <Button
        android:id="@+id/cancelCreateAccountButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createAccount"
        android:layout_alignRight="@+id/createAccount"
        android:layout_below="@+id/createAccount"
        android:layout_marginTop="5dp"
        android:text="@string/cancelCreateAccount" />

</RelativeLayout>
