<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/UsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="86dp"
        android:text="@string/username"
        android:textColor="#000"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/UsernameTextView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/UsernameTextView"
        android:ems="10"
        android:background="@drawable/rect_edit_text"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/PasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UsernameTextView"
        android:layout_below="@+id/UsernameTextView"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PasswordTextView"
        android:layout_alignLeft="@+id/usernameEditText"
        android:layout_alignRight="@+id/usernameEditText"
        android:ems="10"
        android:background="@drawable/rect_edit_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createAccountFragment"
        android:layout_alignRight="@+id/createAccountFragment"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="38dp"
        android:text="@string/loginButton" />

    <Button
        android:id="@+id/createAccountFragment"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/createAccount" />

</RelativeLayout>
